--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0"
   }
